# axum-todo-app

./: .gitignore  Cargo.toml  README.md  todo.db
migrations/: 20251025112522_create_users_table.sql  20251025112531_create_todos_table.sql
src/: auth.rs  db.rs  error.rs  main.rs  model.rs  models.rs
src/model/: mod.rs  service.rs  state.rs  store.rs  todo.rs  user.rs
src/web/: mod.rs  routes_auth.rs  routes_todo.rs
