[package]
name = "axum-todo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "^0.8"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
