[package]
name = "axum-todo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "^0.8"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower-cookies = "0.9"
headers = "0.4"
async-trait = "0.1"

# Database
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1"

# Environment variables
dotenvy = "0.15"

# Utilities
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }